--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,9 @@
     }
   </style>
   <body>
-    <h1>Welcome to OpenShift!</h1>
+    <h1>Basic Express server!</h1>
     <h2>
-      This app is running *somewhere* on an OpenShift cluster, spread across a
-      pod or 2
+      This app is running off render.com
     </h2>
     <div>
       Head to
