--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,7 @@
       This app is running off render.com
     </h2>
     <div>
-      Head to
-      <a>&lt;Your App URL&gt;/env-api</a>
-      to see the environment variables being surfaced
+     Instant deploys, etc etc etc
     </div>
   </body>
 </html>
